<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnRegReturn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:background="@null"
                    android:paddingEnd="10dp"
                    android:paddingStart="1dp"
                    android:contentDescription="Return image"
                    android:scaleType="centerInside"
                    android:src="@drawable/return_button" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/regSignUpLabel"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtRegFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/regFirstName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regFirstNameInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtRegMName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regMiddleNameInput" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textMNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regMiddleNameInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regLastName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regLastNameInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEmailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regEmailInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPasswordLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPasswordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPasswordHint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtPasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regPasswordAgain" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textConfirmPasswordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regPasswordAgainInput"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regTermsAndConditions" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/regTermsAndConditionsText" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <CheckBox
                android:id="@+id/regAgreeToTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regTermsAndConditionsAgree" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/regConfirm" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
